--- a/code/index.html
+++ b/code/index.html
@@ -7,11 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Steenkapperij Juchtmans is sinds 1934 synoniem voor kwaliteit en vakmanschap in de bewerking van natuursteen en composietmateriaal.">
 	<link href="css/default.css" rel="stylesheet">
+	<link href="css/grid.css" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<div id="hero" class="row">
-			<div class="col-md-12">
+	<div id="wrap">
+		<div id="hero" class="container">
+			<div>
 				<div class="jumbotron">
 					<h1>Steenkapperij Juchtmans</h1>
 					<p class="lead">Steenkapperij Juchtmans is sinds 1934 synoniem voor kwaliteit en vakmanschap in de bewerking van natuursteen en composietmateriaal.</p>
@@ -19,42 +20,42 @@
 			</div>
 		</div>
 
-		<div id="aanbod" class="row">
-			<div class="col-sm-6 col-md-4">
+		<div id="aanbod" class="container">
+			<div>
 				<a href="images/arduin.jpg" class="thumbnail" data-gallery="enabled" title="Arduin">
-					<img src="images/arduin.jpg">
+					<img src="images/arduin.jpg" width="400" height="300">
 					<div class="caption">
 						<h4>Arduin</h4>
 					</div>
 				</a>
 			</div>
-			<div class="col-sm-6 col-md-4">
+			<div>
 				<a href="images/tuinornamenten.jpg" class="thumbnail" data-gallery="enabled" title="Tuinornamenten">
-					<img src="images/tuinornamenten.jpg">
+					<img src="images/tuinornamenten.jpg" width="400" height="300">
 					<div class="caption">
 						<h4>Tuinornamenten</h4>
 					</div>
 				</a>
 			</div>
-			<div class="col-sm-6 col-md-4">
+			<div>
 				<a href="images/keukentabletten.jpg" class="thumbnail" data-gallery="enabled" title="Keukentabletten">
-					<img src="images/keukentabletten.jpg">
+					<img src="images/keukentabletten.jpg" width="400" height="300">
 					<div class="caption">
 						<h4>Keukentabletten</h4>
 					</div>
 				</a>
 			</div>
-			<div class="col-sm-6 col-md-4">
+			<div>
 				<a href="images/kapwerk.jpg" class="thumbnail" data-gallery="enabled" title="Kapwerk">
-					<img src="images/kapwerk.jpg">
+					<img src="images/kapwerk.jpg" width="400" height="300">
 					<div class="caption">
 						<h4>Kapwerk</h4>
 					</div>
 				</a>
 			</div>
-			<div class="col-sm-6 col-md-4">
+			<div>
 				<a href="images/grafmonumenten.jpg" class="thumbnail" data-gallery="enabled" title="Grafmonumenten">
-					<img src="images/grafmonumenten.jpg">
+					<img src="images/grafmonumenten.jpg" width="400" height="300">
 					<div class="caption">
 						<h4>Grafmonumenten</h4>
 					</div>
@@ -64,9 +65,9 @@
 
 		<hr />
 
-		<div id="contact" class="row">
+		<div id="contact" class="container">
 			<h2>Contacteer ons</h2>
-			<div class="col-sm-6 col-md-4">
+			<div class="left">
 				<h4>Steenkapperij-Juchtmans</h4>
 				<p>Industriepark 1219<br>
 				3545 Halen</p>
@@ -74,7 +75,7 @@
 				Fax: 013 31 27 08</p>
 			  <p><a href="mailto:info@steenkapperij-juchtmans.be">info@steenkapperij-juchtmans.be</a></p>
 			</div>
-			<div class="col-sm-6 col-md-8">
+			<div class="right">
 				<iframe style="pointer-events: none;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d160789.18160231833!2d5.086543163818384!3d50.97307285291888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c13e9239c7575b%3A0x2c9cd8fd1bc2364c!2sJuchtmans+%2F+Hans!5e0!3m2!1sen!2sbe!4v1422110583840" width="100%" height="350" frameborder="0" style="border:0"></iframe>
 			</div>
 		</div>
