--- a/code/index.html
+++ b/code/index.html
@@ -65,7 +65,7 @@
 				<a href="http://www.stekke.be/knuffelsteen" class="thumbnail" data-gallery="enabled" title="Knuffelsteen">
 					<img src="images/knuffelsteen.jpg" width="400" height="300">
 					<div class="caption">
-						<h4>Knuffelsteen (stekke.be)</h4>
+						<h4>Knuffelstenen <small>(stekke.be)</small></h4>
 					</div>
 				</a>
 			</div>
