--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
 	<title>Steenkapperij Juchtmans</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Steenkapperij Juchtmans is sinds 1934 synoniem voor kwaliteit en vakmanschap in de bewerking van natuursteen en composietmateriaal.">
-	<link href="css/default.css" rel="stylesheet">
+	<link href="css/default.css?v=1" rel="stylesheet">
 	<link href="css/grid.css" rel="stylesheet">
 </head>
 <body>
