--- a/code/index.html
+++ b/code/index.html
@@ -62,7 +62,7 @@
 				</a>
 			</div>
 			<div>
-				<a href="http://www.stekke.be/knuffelsteen" class="thumbnail" data-gallery="enabled" title="Knuffelsteen">
+				<a href="http://www.stekke.be/knuffelsteen" class="thumbnail">
 					<img src="images/knuffelsteen.jpg" width="400" height="300">
 					<div class="caption">
 						<h4>Knuffelstenen <small>(stekke.be)</small></h4>
